--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <footer>
         <!-- aqui teremos o rodapé -->
         <div class="container">
-            <img src="Imagens/logo.png" alt="logo omma"
+            <img src="imagens/logo.png" alt="logo omma">
             <p>© 2023 omma - Todos os direitos são de vocês</p>
 
         </div>
