--- a/listas-receitas.html
+++ b/listas-receitas.html
@@ -26,7 +26,7 @@
         <section class="todas-receitas">
             <div class="container">
                 <div class="titulo">
-                    <h2>receitas-da-semana</h2>
+                    <h2>Receitas da semana</h2>
                 </div>
                 <div class="lista-receitas">
                     <article>
@@ -48,13 +48,13 @@
                     </article>
 
                     <article>
-                        <div class="thumb" style="background-image: url(Imagens/moqueca.png);"></div>
+                        <div class="thumb" style="background-image: url(imagens/moqueca.png);"></div>
                         <h3>Moqueca</h3>
                         <a href="receita.html">conferir</a>
                     </article>
 
                     <article>
-                        <div class="thumb" style="background-image: url(Imagens/bolo-banana.png);"></div>
+                        <div class="thumb" style="background-image: url(imagens/bolo-banana.png);"></div>
                         <h3>nome da receita</h3>
                         <a href="receita.html">conferir</a>
                     </article>
